# Real-time-ML-Noise-Suppression

./: .gitignore  .gitmodules  README.md  run.sh
.github/workflows/: ci.yml
1.model_selection_and_export_onnx/: dataset.py  evaluate.py  export_onnx.py  model.py  plot_results.py  requirements.txt  selftest.py  train.py
1.model_selection_and_export_onnx/results/: benchmark.md
2.model_deployment_with_onnx/: CMakeLists.txt
2.model_deployment_with_onnx/src/: denoiser.hpp  offline_main.cpp  realtime_main.cpp
data/: prep_subset.sh  prepare_data.sh  readme.md
tools/: benchmark.sh  make_demo.sh
